@@ -5,6 +5,7 @@ ndim-utils 0.6.x
   * Stop installing ps2lj4 and list-debuginfo-rpms
   * new man page watch-xsel(1)
   * fixed escaping and formatting for all man pages
+  * watch-xsel: Add --append=FILE argument.
 
 ndim-utils 0.6
   * Migrate to newer build-helpers/
